<resources>
    <string name="app_name">Just Craigslist</string>
    <string name="action_about">About</string>
    <string name="title_activity_pick_city">Pick your location:</string>
    <string name="whatFor">What are you looking for today?</string>
    <string name="searchSug">Type here and press search icon...</string>
    <string name="minPrice">Minimum Price:</string>
    <string name="maxPrice">Maximum Price:</string>
    <string name="title_activity_about">About Just Craigslist:</string>
    <string name="title_activity_web_view">Just Craigslist</string>
    <string name="title_activity_web_list">Open postings:</string>
    <string name="liscence_stringa">Copyright 2017 by AlaskaLinuxUser (https://thealaskalinuxuser.wordpress.com)
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at</string>
    <string name="liscence_stringb">http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="liscence_stringc">Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</string>
    <string name="myGithub">https://github.com/alaskalinuxuser</string>
    <string name="myWebsite">https://thealaskalinuxuser.wordpress.com</string>
    <string name="title_activity_pick_cat">Pick a category:</string>
    <string name="title_activity_jcview">Just Craigslist</string>
    <string name="title_activity_settings">Settings</string>
</resources>
