<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LLAbout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jindong"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.alaskalinuxuser.justcraigslist.AboutActivity"
    tools:showIn="@layout/activity_about">

    <TextView
        android:id="@+id/atv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/liscence_stringa"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/atv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="howL"
        android:text="@string/liscence_stringb"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/atv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/liscence_stringc"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="15sp" />

</LinearLayout>
